--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Navigation Component</string>
+    <string name="no_internet_available">No Internet Available</string>
 </resources>
